      the metadata. This usually defaults to utf-8.

- mssql
    - Added in a new MSGenericBinary type. This maps to the Binary
      type so it can implement the specialized behavior of treating
      length specified types as fixed-width Binary types and
      non-length types as an unbound variable length Binary type.

    - Added in new types: MSVarBinary and MSImage. [ticket:1249]

    - Added in the MSReal and MSNText types.

- sqlite
    - Table reflection now stores the actual DefaultClause value
      for the column. [ticket:1266]

- bugfixes, behavioral changes
- general
- orm
    - Exceptions raised during compile_mappers() are now
      preserved to provide "sticky behavior" - if a hasattr()
      call on a pre-compiled mapped attribute triggers a failing 
      compile and suppresses the exception, subsequent compilation 
      is blocked and the exception will be reiterated on the 
      next compile() call.  This issue occurs frequently
      when using declarative.

    - property.of_type() is now recognized on a single-table
      inheriting target, when used in the context of 
      prop.of_type(..).any()/has(), as well as 
      query.join(prop.of_type(...)).
      
    - Fixed bug when using weak_instance_map=False where modified
      events would not be intercepted for a flush(). [ticket:1272]
      
    - Fixed some deep "column correspondence" issues which could
      impact a Query made against a selectable containing
      multiple versions of the same table, as well as 
      unions and similar which contained the same table columns
      in different column positions at different levels.
      [ticket:1268]
      
    - Custom comparator classes used in conjunction with 
      column_property(), relation() etc. can define 
      new comparison methods on the Comparator, which will
      become available via __getattr__() on the 
      InstrumentedAttribute.   In the case of synonym()